Added remaining configurations

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
+/src/legacy_app/*
+/.idea
+.php_cs.cache
