--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,13 @@
     "license": "proprietary",
     "require": {
         "php": "^7.0.8",
+        "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/web-server-bundle": "^3.4",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
