--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,5 @@
-#index:
-#    path: /
-#    defaults: { _controller: 'App\Controller\DefaultController::index' }
+legacy_site:
+    path: /{path}
+    defaults: { _controller: App\Controller\LegacyController::fallbackAction }
+    requirements: 
+        path: .*
